--- a/app/styles/account.scss
+++ b/app/styles/account.scss
@@ -38,7 +38,7 @@
 }
 
 .view--account {
-    height: 100%;
+    //height: 100%;
     overflow: hidden;
     overflow-y: auto;
 
@@ -243,6 +243,7 @@
                 }
 
                 .form-control {
+                    overflow: auto;
                     label {
                         width: 30%;
                         float: left;
@@ -280,7 +281,7 @@
                         margin-top: 20px;
                     }
 
-                    .btn--account--password {
+                    .btn--account--password, .btn--account--contactTutor {
                         width: 40%;
                         float: left;
                     }
