--- a/app/views/serialMonitor.html
+++ b/app/views/serialMonitor.html
@@ -15,7 +15,7 @@
         </span>
     </div>
     <div class="form-control" style="flex: auto; position: relative">
-        <textarea id="serialData" data-ng-model="serial.dataReceived" class="serial--textArea" readonly></textarea>
+        <textarea id="serialData" data-ng-model="web2board.serial.serialPortData" class="serial--textArea" readonly></textarea>
     </div>
     <!-- Submit Form -->
     <div>
