[SWBIT-2765] PRE-MSMBL

--- a/app/views/modals/contactTutor.html
+++ b/app/views/modals/contactTutor.html
@@ -1,6 +1,6 @@
 <div class="modal_contactTutor">
     <div class="form">
-        <form name="form" class="form--contactTutor" autocomplete="off" ng-submit="confirmAction(form)" novalidate>
+        <form name="form" class="form--contactTutor" autocomplete="off" ng-submit="confirmAction(user)" novalidate>
             <fieldset>
                 <legend class="invisible">contactTutor Form</legend>
                 <div class="form-control">
