fix arduinoISP.ino link

--- a/app/views/support/bootloaderZumBT328.html
+++ b/app/views/support/bootloaderZumBT328.html
@@ -1,9 +1,12 @@
 <p>{{'support-view--bootloaderZumBT328-content1' | translate}}</p>
-<p><strong>{{'support-view--bootloaderZumBT328-title1' | translate}}</strong>:
+<p>
+    <strong>{{'support-view--bootloaderZumBT328-title1' | translate}}</strong>:
     <ul>
         <li class="icon--check">2x Placas ZUM Core (BT-328)</li>
         <li class="icon--check">6x {{'support-view--bootloaderZumBT328-item1' | translate}}</li>
-        <li class="icon--check"><a href="http://arduino.cc/en/Main/Software" target="_blank" class="icon--url">Arduino IDE</a></li>
+        <li class="icon--check">
+            <a href="http://arduino.cc/en/Main/Software" target="_blank" class="icon--url">Arduino IDE</a>
+        </li>
         <li class="icon--check">{{'support-view--bootloaderZumBT328-item2' | translate}}</li>
     </ul>
 </p>
@@ -12,13 +15,16 @@
     <ul>
         <li class="icon--arrow-right">
             <strong>{{'support-view--bootloaderZumBT328-title3' | translate}}</strong>
-            <p>{{'support-view--bootloaderZumBT328-content2-a' | translate}} <a href="res/support/bootloader-ZumBT328/bootloader_ZumBT328.hex" target="_blank" class="icon--url">{{'support-view--bootloaderZumBT328-content2-b' | translate}}</a></p>
+            <p>{{'support-view--bootloaderZumBT328-content2-a' | translate}}
+                <a href="res/support/bootloader-ZumBT328/bootloader_ZumBT328.hex"
+                    target="_blank" class="icon--url">{{'support-view--bootloaderZumBT328-content2-b' | translate}}</a>
+            </p>
             <p>{{'support-view--bootloaderZumBT328-content3' | translate}}
                 <ul>
                     <li class="icon--caret-right">{{'support-view--bootloaderZumBT328-content4' | translate}}</li>
                     <li class="common--text-term-fx">hardware/arduino/avr/bootloaders/bt</li>
                     <p class="support--centered">
-                      <i class="text--secondary">{{'support-view--bootloaderZumBT328-content5' | translate}}</i>
+                        <i class="text--secondary">{{'support-view--bootloaderZumBT328-content5' | translate}}</i>
                     </p>
                     <div class="support--center">
                         <div class="support--img-coolmodal">
@@ -26,7 +32,8 @@
                                 <a href ng-click="imgModal('/images/support/zum-carpeta-arduino.png')">
                                     <img src="/images/support/zum-carpeta-arduino.png" alt="zum-carpeta-arduino" />
                                     <figcaption>
-                                        <h2>{{'support-view--common-hardClickImg1' | translate}} <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
+                                        <h2>{{'support-view--common-hardClickImg1' | translate}}
+                                            <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
                                     </figcaption>
                                 </a>
                             </figure>
@@ -35,7 +42,8 @@
                     <li class="icon--caret-right">
                         {{'support-view--bootloaderZumBT328-content6-a' | translate}}:
                         <p class="support--centered">
-                          <i class="text--secondary">"bootloader_ZumBT328.hex"</i> -> <i class="text--secondary">"ATmegaBOOT_168_atmega328_bt.hex"</i>
+                            <i class="text--secondary">"bootloader_ZumBT328.hex"</i> ->
+                            <i class="text--secondary">"ATmegaBOOT_168_atmega328_bt.hex"</i>
                         </p>
                         {{'support-view--bootloaderZumBT328-content6-b' | translate}}
                     </li>
@@ -44,12 +52,16 @@
         </li>
         <li class="icon--arrow-right">
             <strong>{{'support-view--bootloaderZumBT328-title4' | translate}}</strong>
-            <p>{{'support-view--bootloaderZumBT328-content7' | translate}} <a href="res/support/bootloader-ZumBT328ArduinoISP.ino" target="_blank" class="icon--url">ArduinoISP.ino</a>.</p>
+            <p>{{'support-view--bootloaderZumBT328-content7' | translate}}
+                <a href="res/support/bootloader-ZumBT328/ArduinoISP.ino"
+                    target="_blank" class="icon--url">ArduinoISP.ino</a>.</p>
             <p>{{'support-view--bootloaderZumBT328-content8' | translate}}</p>
             <p>{{'support-view--bootloaderZumBT328-content9' | translate}}
                 <ol class="common--text-editor-fx">
                     <li>Tools/Port =
-                        <strong><i class="text--secondary">{{'support-view--bootloaderZumBT328-info1' | translate}}</i></strong>
+                        <strong>
+                            <i class="text--secondary">{{'support-view--bootloaderZumBT328-info1' | translate}}</i>
+                        </strong>
                     </li>
                     <li>Tools/Board =
                         <strong>Arduino BT</strong>
@@ -63,18 +75,19 @@
         <li class="icon--arrow-right">
             <strong>{{'support-view--bootloaderZumBT328-title5' | translate}}</strong>
             <p>{{'support-view--bootloaderZumBT328-content10' | translate}}</p>
-                <div class="support--center">
-                    <div class="support--img-coolmodal">
-                        <figure class="effect-goliath">
-                            <a href ng-click="imgModal('/images/support/zum-bootloader-2.png')">
-                                <img src="/images/support/zum-bootloader-2.png" alt="placa_ZUM_2" />
-                                <figcaption>
-                                    <h2>{{'support-view--common-hardClickImg1' | translate}} <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
+            <div class="support--center">
+                <div class="support--img-coolmodal">
+                    <figure class="effect-goliath">
+                        <a href ng-click="imgModal('/images/support/zum-bootloader-2.png')">
+                            <img src="/images/support/zum-bootloader-2.png" alt="placa_ZUM_2" />
+                            <figcaption>
+                                <h2>{{'support-view--common-hardClickImg1' | translate}}
+                                    <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
+                            </figcaption>
+                        </a>
+                    </figure>
                 </div>
+            </div>
             <table class="support--center" width="313">
                 <tbody>
                     <tr>
@@ -84,7 +97,8 @@
                         </th>
                         <th class="support--bootloader-col"></th>
                         <th>
-                            <strong>(B)</strong> <i class="text--secondary">[{{'support-view--bootloaderZumBT328-info3' | translate}}]</i>
+                            <strong>(B)</strong>
+                            <i class="text--secondary">[{{'support-view--bootloaderZumBT328-info3' | translate}}]</i>
                         </th>
                     </tr>
                     <tr>
@@ -138,7 +152,9 @@
             <p>{{'support-view--bootloaderZumBT328-content11' | translate}}
                 <ol class="common--text-editor-fx">
                     <li>Tools/Port =
-                        <strong><i class="text--secondary">{{'support-view--bootloaderZumBT328-info4' | translate}}</i></strong>
+                        <strong>
+                            <i class="text--secondary">{{'support-view--bootloaderZumBT328-info4' | translate}}</i>
+                        </strong>
                     </li>
                     <li>Tools/Board =
                         <strong>Arduino BT</strong>
@@ -156,15 +172,17 @@
         <li class="icon--arrow-right">
             <strong>{{'support-view--bootloaderZumBT328-title7' | translate}}</strong>
             <p>
-              <ul>
-                <li>
-                  <ul>
-                    <li>{{'support-view--bootloaderZumBT328-content12' | translate}}</li>
-                  </ul>
-                </li>
-              </ul>
+                <ul>
+                    <li>
+                        <ul>
+                            <li>{{'support-view--bootloaderZumBT328-content12' | translate}}</li>
+                        </ul>
+                    </li>
+                </ul>
             </p>
         </li>
     </ul>
 </p>
-<p><strong>{{'support-view--bootloaderZumBT328-next' | translate}}</strong></p>
+<p>
+    <strong>{{'support-view--bootloaderZumBT328-next' | translate}}</strong>
+</p>
