--- a/app/views/plotter.html
+++ b/app/views/plotter.html
@@ -33,7 +33,7 @@
         <div class="chart-air">
             <button class="btn btn--tertiary btn--small" ng-click="onPause()">{{pauseText}}</button>
             <button class="btn btn--tertiary btn--small" ng-click="onClear()">{{'plotter-clear' | translate}}</button>
-            <common-dropdown class="projects--sort-dropdown right" direction="up" heading-option="serial.baudrate" options-click="onBaudrateChanged"
+            <common-dropdown class="projects--sort-dropdown right" direction="up" heading-option="currentBaudRate" options-click="onBaudrateChanged"
                 options="baudrateOptions" style="width:150px"></common-dropdown>
         </div>
     </div>
