Added zumjunior board and components

--- a/app/styles/components/_toolbox.scss
+++ b/app/styles/components/_toolbox.scss
@@ -273,6 +273,7 @@ $hw_toolbox: 210px;
 
     .toolbox-mbot,
     .toolbox-mbotV2,
+    .toolbox-zumjunior,
     .toolbox-rangerlandraider,
     .toolbox-rangernervousbird,
     .toolbox-rangerraptor,
