--- a/app/styles/hardwaretab.scss
+++ b/app/styles/hardwaretab.scss
@@ -391,6 +391,10 @@ $hw_toolbox: 210px;
             background-image: url("/images/boards/bqZUM20.svg"), url("/images/boards/bqZUM20.png");
             background-color: transparent;
         }
+        &.zumjunior {
+            background-image: url("/images/boards/zumjunior.svg"), url("/images/boards/zumjunior.png");
+            background-color: transparent;
+        }
 
         &.FreaduinoUNO {
             background-image: url("/images/boards/FreaduinoUNO.svg"), url("/images/boards/FreaduinoUNO.png");
