--- a/app/views/project/bloqsToolbox.html
+++ b/app/views/project/bloqsToolbox.html
@@ -10,23 +10,117 @@
 </div>
 
 <xml id="blockly--toolbox" style="display: none;">
-    <block type="experiment"></block>
-    <block type="step"></block>
-    <block type="container"></block>
-    <block type="containerList"></block>
-    <block type="pipette"></block>
-    <block type="electrophoresis"></block>
-    <block type="incubate"></block>
-    <block type="centrifugation"></block>
-    <block type="thermocycling"></block>
-    <block type="measurement"></block>
-    <block type="sangerSequencing"></block>
-    <block type="oligosynthesize"></block>
-    <block type="colonyPicking"></block>
-    <block type="cellSpreading"></block>
-    <block type="flashFreeze"></block>
-    <block type="mix"></block>
+    <category name="Organization">
+        <block type="experiment"></block>
+        <block type="step"></block>
+    </category>
+    <category name="Containers">
+        <block type="container"></block>
+        <block type="containerList"></block>
+    </category>
+    <category name="Operations">
+        <!--<block type="turbidostat"></block>-->
+        <block type="pipette"></block>
+        <block type="electrophoresis"></block>
+        <block type="incubate"></block>
+        <block type="centrifugation"></block>
+        <block type="thermocycling"></block>
+        <block type="measurement"></block>
+        <block type="sangerSequencing"></block>
+        <block type="oligosynthesize"></block>
+        <block type="colonyPicking"></block>
+        <block type="cellSpreading"></block>
+        <block type="flashFreeze"></block>
+        <block type="mix"></block>
+        <block type="flowCitometry"></block>
+    </category>
+        <category name="Logic">
+        <block type="controls_if"></block>
+        <block type="logic_compare"></block>
+        <block type="logic_operation"></block>
+        <block type="logic_negate"></block>
+        <block type="logic_boolean"></block>
+        <block type="logic_null"></block>
+        <block type="logic_ternary"></block>
+        <block type="penes"></block>
+    </category>
+    <category name="Loops">
+        <block type="controls_repeat_ext">
+          <value name="TIMES">
+            <block type="math_number">
+              <field name="NUM">10</field>
+            </block>
+          </value>
+        </block>
+        <block type="controls_whileUntil"></block>
+        <block type="controls_for">
+          <value name="FROM">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+          <value name="TO">
+            <block type="math_number">
+              <field name="NUM">10</field>
+            </block>
+          </value>
+          <value name="BY">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+        </block>
+        <block type="controls_forEach"></block>
+        <block type="controls_flow_statements"></block>
+    </category>
+    <category name="Math">
+        <block type="math_number"></block>
+        <block type="math_arithmetic"></block>
+        <block type="math_single"></block>
+        <block type="math_trig"></block>
+        <block type="math_constant"></block>
+        <block type="math_number_property"></block>
+        <block type="math_change">
+          <value name="DELTA">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+        </block>
+        <block type="math_round"></block>
+        <block type="math_on_list"></block>
+        <block type="math_modulo"></block>
+        <block type="math_constrain">
+          <value name="LOW">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+          <value name="HIGH">
+            <block type="math_number">
+              <field name="NUM">100</field>
+            </block>
+          </value>
+        </block>
+        <block type="math_random_int">
+          <value name="FROM">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+          <value name="TO">
+            <block type="math_number">
+              <field name="NUM">100</field>
+            </block>
+          </value>
+        </block>
+        <block type="math_random_float"></block>
+    </category>
+    
+    <category name="Variables" custom="VARIABLE"></category>
+    <category name="Functions" custom="PROCEDURE"></category>
 </xml>
+
 <xml id="myowntoolbox" style="display: none">
       <category name="Input / Output">
         <block type="source"></block>
