--- a/app/views/project/softwareTab.html
+++ b/app/views/project/softwareTab.html
@@ -149,7 +149,7 @@
             {{'bloqsTab_button_editCode' | translate }}
         </button>
         <div class="console--main">
-            <beauty-code class="console--content" data-code="currentProject.code"></beauty-code>
+            <beauty-code class="console--content" data-code="arduinoCode"></beauty-code>
         </div>
     </div>
     <div class="software--tab" ng-show="softTab==='autoprotocols'">
